Primera ventana de la vista principal

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ilanguage</string>
+    <string name="ilanguage">ILanguage</string>
+    <string name="make_a_conversation_improve_your_language">Make a conversation, improve your language</string>
 </resources>
