--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">ilanguage</string>
     <string name="ilanguage">ILanguage</string>
     <string name="make_a_conversation_improve_your_language">Make a conversation, improve your language</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="sign_in">Sign In</string>
+    <string name="choose_your_role_to_get_started">Choose your role to get started</string>
+    <string name="student">Student</string>
+    <string name="a_teacher">A teacher</string>
+    <string name="student">Student</string>
 </resources>
