--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
     <string name="search">Search</string>
     <string name="notifications">Notifications</string>
     <string name="messages">Messages</string>
+    <string name="profile_name">Profile name</string>
+    <string name="textview">TextView</string>
+    <string name="textview">TextView</string>
+    <string name="description">Description</string>
+    <string name="interest">Interest</string>
+    <string name="edit">Edit</string>
 </resources>
