--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="choose_your_role_to_get_started">Choose your role to get started</string>
     <string name="student">Student</string>
     <string name="a_teacher">A teacher</string>
-    <string name="student">Student</string>
+    <string name="password">Password</string>
+    <string name="confirm_password">Confirm Password</string>
 </resources>
