--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">ilanguage</string>
+    <string name="hint_my_profile">My Profile</string>
+    <string name="hint_password">Password</string>
+    <string name="hint_email">Email</string>
+    <string name="hint_full_name">Full Name</string>
+    <string name="hint_description">Description</string>
+    <string name="hint_save">Save</string>
+    <string name="hint_cancel">Cancel</string>
 </resources>
