--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,13 @@
     <string name="hint_description">Description</string>
     <string name="hint_save">Save</string>
     <string name="hint_cancel">Cancel</string>
+    <string name="mary_doe">Mary Doe</string>
+    <string name="english_sport_soccer">English-Sport Soccer</string>
+    <string name="hi_jhon">Hi Jhon!</string>
+    <string name="description_session">In this class we hace a conversation about sport, on specifitty soccer.</string>
+    <string name="hour">1h</string>
+    <string name="cancel">CANCEL</string>
+    <string name="join">JOIN</string>
     <string name="todo">TODO</string>
 
 </resources>
