Profile View Activity linked with API and logged user

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="cancel">CANCEL</string>
     <string name="join">JOIN</string>
     <string name="todo">TODO</string>
+    <string name="languages">Languages</string>
 
 
 </resources>
