--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,8 @@
     <string name="join">JOIN</string>
     <string name="todo">TODO</string>
     <string name="languages">Languages</string>
+    <string name="stringreservar">reservar</string>
+    <string name="Reservar">k</string>
 
 
 </resources>
